<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Activity.ResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/icon_logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/material_dynamic_neutral30"
            android:textStyle="bold"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textColor="@color/material_dynamic_neutral30"
            android:layout_marginBottom="20dp"
            android:text="@string/enter_your_email_to_reset_your_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/material_dynamic_neutral30"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/recovery_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email_hint"
            android:inputType="text"
            android:padding="18dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="22dp"/>

        <Button
            android:id="@+id/reset_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/reset_password"
            android:textColor="#2196F3"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/remembered_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/remember_your_password"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/back_to_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_back"
                android:textColor="#C62828"
                android:backgroundTint="@color/white"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>