<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:gravity="center"
    android:padding="18dp"
    android:background="@drawable/backgroundimage"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/icon_logo"
            android:elevation="200dp"/>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/material_dynamic_neutral30"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:importantForAutofill="no"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/material_dynamic_neutral30"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/forgot_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/material_dynamic_neutral30"
            android:layout_gravity="end"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/login"
            android:textColor="@android:color/holo_purple"
            android:textSize="20sp"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/registertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


<!--        <ImageView-->
<!--            android:id="@+id/googleLogin"-->
<!--            android:layout_width="248dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:src="@drawable/googleloginicon" />-->

<!--        <ImageView-->
<!--            android:id="@+id/facebookLogin"-->
<!--            android:layout_width="248dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:src="@drawable/loginwithfacebook" />-->

    </LinearLayout>
</RelativeLayout>